src/pre_push/body/snapshots/gherrit__pre_push__body__legacy__tests__renders_private_root_at_v1.snap
---
source: src/pre_push/body/legacy.rs
expression: "body(\"Introduce widgets\\n\\nExplain why the widgets matter.\\n\\ngherrit-pr-id: Groot\",\nNone, 11, 1, \"Groot\", None, Some(\"Gmiddle\"),).render()"
---
<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->

Introduce widgets

Explain why the widgets matter.



---

- 　  #33
- 　  #22
- 👉 #11

<details>
<summary><strong>⬇️ Download this PR</strong></summary>

######

**Branch**
```bash
git fetch origin refs/heads/Groot && git checkout -b pr-Groot FETCH_HEAD
```

**Checkout**
```bash
git fetch origin refs/heads/Groot && git checkout FETCH_HEAD
```

**Cherry Pick**
```bash
git fetch origin refs/heads/Groot && git cherry-pick FETCH_HEAD
```

**Pull**
```bash
git pull origin refs/heads/Groot
```

</details>

*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*

<!-- WARNING: GHerrit relies on the following metadata to work properly. DO NOT EDIT OR REMOVE. --><!-- gherrit-meta: {"id":"Groot","parent":null,"child":"Gmiddle"} -->
